# obs-studio

libobs/media-io/: audio-io.h
plugins/: CMakeLists.txt
plugins/linux-alsa/: CMakeLists.txt  alsa-input.c  linux-alsa.c
plugins/linux-pulseaudio/: CMakeLists.txt  pulse-input.c
